--- a/Dashboard/package.json
+++ b/Dashboard/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.23",
     "@heroicons/vue": "^2.2.0",
     "@nuxt/icon": "^1.15.0",
     "@tailwindcss/vite": "^4.1.11",
