--- a/Dashboard/package.json
+++ b/Dashboard/package.json
@@ -30,7 +30,8 @@
     "tw-animate-css": "^1.3.5",
     "vue": "^3.5.17",
     "vue-chartjs": "^5.3.2",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@iconify-json/lucide": "^1.2.57",
