--- a/Dashboard/package.json
+++ b/Dashboard/package.json
@@ -21,6 +21,9 @@
     "clsx": "^2.1.1",
     "compression": "^1.8.0",
     "hammerjs": "^2.0.8",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.525.0",
     "lucide-vue-next": "^0.525.0",
     "nuxt": "^3.17.6",
@@ -31,7 +34,8 @@
     "vue": "^3.5.17",
     "vue-chartjs": "^5.3.2",
     "vue-router": "^4.5.1",
-    "xlsx": "^0.18.5"
+    "xlsx-js-style": "^1.2.0",
+    "xlsx-populate": "^1.21.0"
   },
   "devDependencies": {
     "@iconify-json/lucide": "^1.2.57",
