--- a/Dashboard/package.json
+++ b/Dashboard/package.json
@@ -16,10 +16,14 @@
     "@nuxt/icon": "^1.15.0",
     "@tailwindcss/vite": "^4.1.11",
     "chart.js": "^4.5.0",
+    "chartjs-adapter-date-fns": "^3.0.0",
     "chartjs-plugin-zoom": "^2.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "compression": "^1.8.0",
+    "date-fns": "^3.6.0",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "hammerjs": "^2.0.8",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
@@ -34,6 +38,7 @@
     "vue": "^3.5.17",
     "vue-chartjs": "^5.3.2",
     "vue-router": "^4.5.1",
+    "xlsx": "^0.18.5",
     "xlsx-js-style": "^1.2.0",
     "xlsx-populate": "^1.21.0"
   },
