--- a/Dashboard/package.json
+++ b/Dashboard/package.json
@@ -31,6 +31,8 @@
     "lucide-react": "^0.525.0",
     "lucide-vue-next": "^0.525.0",
     "nuxt": "^3.17.7",
+    "pinia": "^3.0.3",
+    "pinia-plugin-persistedstate": "^4.4.1",
     "reka-ui": "^2.3.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
